--- a/app/views/article.view.html
+++ b/app/views/article.view.html
@@ -3,9 +3,12 @@
         <div class="panel-body">
             <h3>
                 {{article.subject}}
+                <small>
+                    <a ui-sref="main.article.edit({ article: article.id })">edit</a>
+                </small>
             </h3>
             <div class="text-muted">
-                Created on {{article.createdAt | date:'mediumDate'}}
+                Created on {{article.createdAt | date:"MMM d, y 'at' h:mma"}}
             </div>
             <div style="margin-top: 10px;">
                 {{article.body}}
