--- a/app/views/article.edit.html
+++ b/app/views/article.edit.html
@@ -4,7 +4,11 @@
             <div class="panel-body">
                 <div class="form-group">
                     <h3>Subject</h3>
-                    <input type="text" class="form-control input-lg" ng-model="article.subject">
+                    <input type="text" class="form-control input-lg" ng-model="article.subject" placeholder="Enter subject" required>
+                </div>
+                <div class="form-group">
+                    <h3>Type</h3>
+                    <select class="form-control" ng-model="article.type" ng-options="type for type in type.supported" disabled></select>
                 </div>
                 <div class="form-group">
                     <h3>Body</h3>
