--- a/app/views/article.edit.html
+++ b/app/views/article.edit.html
@@ -1,10 +1,14 @@
 <div class="row">
-    <form role="form">
+    <form novalidate role="form" name="articleEdit">
         <div class="panel panel-default" style="margin-top: 20px">
             <div class="panel-body">
                 <div class="form-group">
                     <h3>Subject</h3>
                     <input type="text" class="form-control input-lg" ng-model="article.subject" placeholder="Enter subject" required>
+                </div>
+                <div class="form-group">
+                    <h3>Slug</h3>
+                    <input type="text" class="form-control" ng-model="article.slug" ng-pattern="'[a-z0-9]+(\-[a-z0-9]+)*'" required>
                 </div>
                 <div class="form-group">
                     <h3>Type</h3>
@@ -16,9 +20,9 @@
                 </div>
             </div>
             <div class="panel-footer">
-                <button class="btn btn-default" ui-sref="main.article.view({article: article.id})" ui-sref-opts="{reload: true}">Cancel</button>
+                <button class="btn btn-default btn-lg" ui-sref="main.article.view({article: article.id})" ui-sref-opts="{reload: true}">Cancel</button>
                 <div class="pull-right">
-                    <button type="submit" class="btn btn-default" ng-click="update(article)">Submit</button>
+                    <button type="submit" class="btn btn-danger btn-lg" ng-disabled="articleEdit.$invalid" ng-click="update(article)">Submit</button>
                 </div>
             </div>
         </div>
